--- a/test/hardware.html
+++ b/test/hardware.html
@@ -67,7 +67,10 @@
             <br>
         </div>
         <br>
-        <h3>Log:</h3>
+        <b>Log:</b><br>
+        <label for="enable_log">Enable logging
+            <input type="checkbox" name="enable_log" id="enable_log" checked>
+        </label><br>
         <div id="log">
             
         </div>
